--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -27,7 +27,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/vsix-to-npm:latest, ${{ secrets.DOCKERHUB_USERNAME }}/vsix-to-npm:${{ github.run_number }}
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/vscode-extentions-repacker:latest, ${{ secrets.DOCKERHUB_USERNAME }}/vscode-extentions-repacker:${{ github.run_number }}
       -
         name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
