--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,8 @@ services:
             NO_PROXY: repo,127.0.0.1,localhost
         volumes:
             - ./repacker-config.json:/root/.vsix-to-npm/config.json
+            # To publish to already configured private npm repo on your localhost
+            # Or create .npmrc file with auth and change the host path
             - $HOME/.npmrc:/root/.npmrc
     repacker-debug:
         image: smuel770/vscode-extentions-repacker:11
